6.2.4 목 프레임워크